--- a/employees/ms-hr-employees.yml
+++ b/employees/ms-hr-employees.yml
@@ -18,7 +18,7 @@ eureka:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     serviceUrl:
-      defaultZone: http://microservice-discoveryserver:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 hystrix:
   command:
