--- a/users/ms-hr-users.yml
+++ b/users/ms-hr-users.yml
@@ -16,7 +16,7 @@ eureka:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     serviceUrl:
-      defaultZone: http://microservice-discoveryserver:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 info:
   environment: development
